--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "1",
   "version": "1.0.0",
   "main": "app.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.15.2"
+  }
 }
